// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> returns the proper component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#6f6b70",
      "flexDirection": "row",
      "height": 40,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={7}
    onChangeText={[Function]}
    placeholder="Weight"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="Reps"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="RPE"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "margin": 3,
        "marginLeft": 8,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "lightgray",
          "borderRadius": 5,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 81,
        }
      }
    >
      Add
    </Text>
  </View>
</View>
`;

exports[`<Footer /> returns the proper component for each ExerciseProperty 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#6f6b70",
      "flexDirection": "row",
      "height": 40,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={7}
    onChangeText={[Function]}
    placeholder="Weight"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="Reps"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="RPE"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "margin": 3,
        "marginLeft": 8,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "lightgray",
          "borderRadius": 5,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 81,
        }
      }
    >
      Add
    </Text>
  </View>
</View>
`;

exports[`<Footer /> returns the proper component for each ExerciseProperty 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#6f6b70",
      "flexDirection": "row",
      "height": 40,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
        },
        Object {
          "flex": 2,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="decimal-pad"
      maxLength={7}
      onChangeText={[Function]}
      placeholder="Distance"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "flex": 1,
          "margin": 3,
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "flex": 1,
          "margin": 3,
        }
      }
    >
      <RCTPicker
        items={
          Array [
            Object {
              "label": "m",
              "textColor": undefined,
              "value": "m",
            },
            Object {
              "label": "km",
              "textColor": undefined,
              "value": "km",
            },
            Object {
              "label": "yd",
              "textColor": undefined,
              "value": "yd",
            },
            Object {
              "label": "mi",
              "textColor": undefined,
              "value": "mi",
            },
          ]
        }
        onChange={[Function]}
        selectedIndex={0}
        style={
          Array [
            Object {
              "height": 216,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "flexDirection": "row",
        },
        Object {
          "flex": 3,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="decimal-pad"
      maxLength={2}
      onChangeText={[Function]}
      placeholder="HH"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "flex": 1,
          "margin": 3,
        }
      }
      underlineColorAndroid="transparent"
    />
    <TextInput
      allowFontScaling={true}
      keyboardType="decimal-pad"
      maxLength={2}
      onChangeText={[Function]}
      placeholder="MM"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "flex": 1,
          "margin": 3,
        }
      }
      underlineColorAndroid="transparent"
    />
    <TextInput
      allowFontScaling={true}
      keyboardType="decimal-pad"
      maxLength={5}
      onChangeText={[Function]}
      placeholder="SS"
      rejectResponderTermination={true}
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 5,
          "flex": 1,
          "margin": 3,
        }
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="RPE"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "margin": 3,
        "marginLeft": 8,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "lightgray",
          "borderRadius": 5,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 81,
        }
      }
    >
      Add
    </Text>
  </View>
</View>
`;

exports[`<Footer /> returns the proper component for undefined properties 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#6f6b70",
      "flexDirection": "row",
      "height": 40,
    }
  }
>
  <View />
  <View />
  <TextInput
    allowFontScaling={true}
    keyboardType="decimal-pad"
    maxLength={4}
    onChangeText={[Function]}
    placeholder="RPE"
    rejectResponderTermination={true}
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 5,
        "flex": 1,
        "margin": 3,
      }
    }
    underlineColorAndroid="transparent"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "margin": 3,
        "marginLeft": 8,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "backgroundColor": "lightgray",
          "borderRadius": 5,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
          "textAlignVertical": "center",
          "width": 81,
        }
      }
    >
      Add
    </Text>
  </View>
</View>
`;
